--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@ h.length)); return t };
         window.location = "https://newlinemikeuop.github.io/video/?"+ h(7, '')+"";
         }else
 {
-window.location = "https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf";
+window.location = "https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf?";
 }
 //]]>
 </script>
